# stratum

./: .gitignore
.github/workflows/: release-bin.yaml
common/: Cargo.toml
protocols/v1/examples/: client_and_server.rs
protocols/v1/src/: lib.rs  utils.rs
protocols/v1/src/methods/: client_to_server.rs  mod.rs  server_to_client.rs
protocols/v2/binary-sv2/codec/: Cargo.toml
protocols/v2/binary-sv2/codec/src/: lib.rs
protocols/v2/binary-sv2/derive_codec/: Cargo.toml
protocols/v2/codec-sv2/: Cargo.toml
protocols/v2/noise-sv2/src/: handshake.rs  signature_message.rs
protocols/v2/roles-logic-sv2/: Cargo.toml
protocols/v2/roles-logic-sv2/src/: errors.rs  job_creator.rs  job_dispatcher.rs  parsers.rs  utils.rs
protocols/v2/roles-logic-sv2/src/channel_logic/: channel_factory.rs  mod.rs  proxy_group_channel.rs
protocols/v2/roles-logic-sv2/src/handlers/: job_declaration.rs  mining.rs
protocols/v2/subprotocols/mining/: Cargo.toml
protocols/v2/subprotocols/mining/src/: lib.rs  (+5 more)
roles/: Cargo.toml
roles/demand-solo-all-in-one/: Cargo.toml  flow
roles/demand-solo-all-in-one/src/: ck_proxy.rs  healty_check.rs  jd_client.rs  main.rs  sv1_proxy.rs  translator.rs
roles/jd-client/: Cargo.toml
roles/jd-client/config-examples/: mia.toml
roles/jd-client/src/: args.rs  main.rs
roles/jd-client/src/lib/: downstream.rs  mod.rs  proxy_config.rs
roles/mining-proxy/src/lib/: upstream_mining.rs
roles/roles-utils/network-helpers/: Cargo.toml
roles/roles-utils/rpc/: Cargo.toml
roles/test-utils/mining-device/: Cargo.toml
roles/tests-integration/lib/: sniffer.rs
roles/tests-integration/tests/: translator_integration.rs
roles/translator/: Cargo.toml
roles/translator/config-examples/: tproxy-config-local-jdc-example.toml
roles/translator/src/: args.rs  main.rs
roles/translator/src/lib/: error.rs  mod.rs  proxy_config.rs
utils/: Cargo.toml
utils/error-handling/src/: lib.rs
(+18 files in other folders)
